--- a/app/src/main/res/layout/list_item_mall.xml
+++ b/app/src/main/res/layout/list_item_mall.xml
@@ -91,6 +91,15 @@
                 android:layout_weight="1"
                 android:layout_marginLeft="2dp"/>
 
+            <Button
+                android:id="@+id/btn_detail"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="Detail"
+                android:drawableLeft="@drawable/ic_delete"
+                android:layout_weight="1"
+                android:layout_marginLeft="2dp"/>
+
         </LinearLayout>
 
     </LinearLayout>
