--- a/app/src/main/res/layout/list_item_mall.xml
+++ b/app/src/main/res/layout/list_item_mall.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nama"
-            android:textSize="20sp"
+            android:textSize="30sp"
             android:textStyle="bold"/>
 
         <TextView
@@ -35,24 +35,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Deskripsi"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/tv_koordinat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="koordinat"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/tv_alamat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Alamat"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textSize="20sp"/>
 
 
         <TextView
@@ -79,7 +76,6 @@
                 android:id="@+id/btn_ubah"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:text="Ubah"
                 android:drawableLeft="@drawable/ic_ubah"
                 android:layout_weight="1"
                 android:layout_marginRight="2dp"/>
@@ -88,8 +84,15 @@
                 android:id="@+id/btn_hapus"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:text="Hapus"
                 android:drawableLeft="@drawable/ic_delete"
+                android:layout_weight="1"
+                android:layout_marginLeft="2dp"/>
+
+            <Button
+                android:id="@+id/btn_detail"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:drawableLeft="@drawable/ic_detail"
                 android:layout_weight="1"
                 android:layout_marginLeft="2dp"/>
 
